# dora

./: .devcontainer.json  .editorconfig  .env-example  .env.test  .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .stylelintrc  .stylelintrc.json  .talismanrc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  jsconfig.json  package-lock.json  package.json  playwright.config.js  playwright.config.ts  postcss.config.cjs  prettier.config.cjs  release.sh  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
analytics/: .env.example  .pre-commit-config.yaml  .user.yml  Makefile  README.md  cron.json  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt  sync-analytics.sh  sync-matomo.py  tables.txt
analytics/metabase_scanner/: README.md  metabase_scan.py  pyproject.toml
analytics/models/: _sources.yml
analytics/models/ephemeral/: _ephemeral_models.yml  eph_users_with_iMer.sql
analytics/models/legacy/: _sources.yml
analytics/models/marts/: _marts_properties.yml  dim_users.sql  fact_iMer.sql
analytics/models/reporting/: _reporting_properties.yml  number_of_views_by_funded_service.sql  views_from_funded_services.sql
analytics/models/staging/: _staging_models.yml  stg_accompagnateurs.sql  stg_mobilisationevent.sql  stg_nb_orientations_per_user.sql  stg_orientation.sql  stg_pageview.sql  stg_searchview.sql  stg_service.sql  stg_services_models.sql  stg_serviceview.sql  stg_structure.sql  stg_user.sql
analytics/seeds/: _seeds.yml  stats_insertion.csv
analytics/seeds/les_emplois/: properties.yml  settings.csv
back/: .buildpacks  .gitignore  .pre-commit-config.yaml  .talismanrc  Aptfile  Makefile  Procfile  README.md  cron.json  docker-compose.yml  docker-compose.yml.template  generate_url.py  nginx.conf.erb  pyproject.toml  requirements.txt  scalingo.json
back/config/: admin.py  domain_redirect_middleware.py  urls.py
back/config/settings/: base.py  dev.py  prod.py  sentry.py  test.py
back/config/tests/: test_middleware.py
back/dora/: conftest.py
back/dora/admin_express/: models.py  tests.py  utils.py  views.py
back/dora/api/: exceptions.py  serializers.py  test_api.py  tests.py  views.py
back/dora/auth_links/: emails.py  enums.py  urls.py  utils.py  views.py
back/dora/core/: admin.py  authentication.py  commands.py  constants.py  csv_user_import.py  emails.py  file_upload_validators.py  mixins.py  models.py  pagination.py  serializers.py  test_utils.py  throttling.py  uploads.py  utils.py  validators.py  views.py
back/dora/data_inclusion/: __init__.py  client.py  constants.py  diffusion_zone_info.py  enums.py  mappings.py  test_diffusion_zone_info.py  test_utils.py  tests.py  zone_codes.py
back/dora/decoupage_administratif/: admin.py  api_client.py  apps.py  importer.py  models.py  serializers.py  tests.py  utils.py  views.py
back/dora/emplois/: emails.py  serializers.py  urls.py  views.py
back/dora/logs/: __init__.py  admin.py  core.py  utils.py
back/dora/nexus/: sync.py  (+5 more)
back/envs-example/: dev.env  secrets.env
back/requirements/: base.in  base.txt  dev.in  dev.txt  prod.in  prod.txt  test.in  test.txt
back/scripts/: email_service_brouillon_mednum.py  import_cresus_services.py  import_cresus_structures.py  import_services.py  import_siaes.py
back/tools/: anonymize-orientations.sh  clock.sh  close-expired-orientations.sh  datanymizer-config.yml  delete-old-accepted-orientation-attachments.sh  delete-old-closed-orientation-attachments.sh  delete-orphaned-documents.sh  delete-orphaned-uploads.sh  import-decoupage-administratif.sh  reset-database.sh  sync-nexus.sh  update-metabase-db.sh
(+2003 files in other folders)
