[project]
name = "dora-back"
dynamic = ["version"]
requires-python = "==3.13.*"

[tool.pytest.ini_options]
# Les variables d'environnement ont priorité sur la configuration du fichier de config.
# Pour sélectionner une configuration de settings Django depuis ce fichier:
addopts="--ds=config.settings.test"
python_files = ["test.py", "tests*.py", "test_*.py"]
filterwarnings = [
	# Ignore le warning spécifique de pyOpenSSL sur les CSR
	# (une PR en attente de @tonial dans `mozilla-django-oidc` règle le problème)
	"ignore:CSR support in pyOpenSSL is deprecated:DeprecationWarning",
	# La partie `back` n'utilise pas les fichiers statiques :
	# on peut ignorer l'absence d'un répertoire `staticfiles`
	"ignore:No directory at:UserWarning"
]
markers = [
    "no_django_db: mark tests that should not be marked with django_db."
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
ignore = ["E501", "E203"]
# Compatibilité minimale avec flake8, à faire évoluer si nécessaire
# voir les règles de lint : https://docs.astral.sh/ruff/rules/
select = [
    "Q",  # flake8 : quotes
    "F",  # pyflakes
    "E",  # pycodestyle : erreurs
    "W",  # pycodestyle : avertissements
    "I",  # isort
]

[tool.ruff.lint.isort]
known-first-party = ["dora"]
